bug#29562 default collation of ucs2_unicode_ci crashes slave Problem: some pieces of code relied on the default character set settings, which didn't work in case of default character set ucs2. Fix: Specifying character set explicitly, not to depend on the default settings.