sql/ha_ndbcluster_binlog.cc
@@ -775,7 +775,7 @@ static int ndbcluster_create_ndb_apply_status_table(THD *thd)
                    " log_name VARCHAR(255) BINARY NOT NULL, "
                    " start_pos BIGINT UNSIGNED NOT NULL, "
                    " end_pos BIGINT UNSIGNED NOT NULL, "
-                   " PRIMARY KEY USING HASH (server_id) ) ENGINE=NDB");
+                   " PRIMARY KEY USING HASH (server_id) ) ENGINE=NDB CHARACTER SET utf8");
 
   const int no_print_error[4]= {ER_TABLE_EXISTS_ERROR,
                                 701,
@@ -835,7 +835,7 @@ static int ndbcluster_create_schema_table(THD *thd)
                    " id INT UNSIGNED NOT NULL,"
                    " version INT UNSIGNED NOT NULL,"
                    " type INT UNSIGNED NOT NULL,"
-                   " PRIMARY KEY USING HASH (db,name) ) ENGINE=NDB");
+                   " PRIMARY KEY USING HASH (db,name) ) ENGINE=NDB CHARACTER SET utf8");
 
   const int no_print_error[4]= {ER_TABLE_EXISTS_ERROR,
                                 701,
@@ -3959,6 +3959,7 @@ restart:
         i_ndb->setReportThreshEventFreeMem(ndb_report_thresh_binlog_mem_usage);
 
         bzero((char*) &row, sizeof(row));
+        thd->variables.character_set_client= &my_charset_latin1;
         injector::transaction trans;
         // pass table map before epoch
         {
